@@ -38,3 +38,14 @@ Scenario: UserFormWithDefaultFields should render properly
   And I should see "Castaneda"
   And I should see "writer"
 
+@javascript
+Scenario: FormPanel should be functional without model provided
+  Given I am on the FormWithoutModel test page
+  When I fill in "Text field:" with "Some text"
+  And I fill in "Number field:" with "42"
+  And I check "Boolean field:"
+  And I press "Apply"
+
+  Then I should see "Text field: Some text"
+  And I should see "Number field: 42"
+  And I should see "Boolean field: true"
