@@ -11,6 +11,7 @@
 	* new +getter+ config option for columns/fields, a lambda receiving the record as parameter
 	* new +setter+ config option for columns/fields, a lambda receiving the record as first parameter, new value as the second
 	* GridPanel passes columns' default values to the "Add in form" form
+	* FormPanel can now be used without specifying a model
 
 = v0.6.2 - 2010-11-05
 * compatibility with netzke-core 0.6.4
